--- a/client/src/pages/profile/profile.css
+++ b/client/src/pages/profile/profile.css
@@ -1,50 +1,59 @@
-.profile{
-    display: flex;
+.profile {
+  display: flex;
 }
 
-.profileRight{
-    flex: 9;
+.profileRight {
+  flex: 9;
 }
 
-.profileCover{
-    height: 320px;
-    position: relative;
+.profileCover {
+  height: 320px;
+  position: relative;
 }
 
-.profileCoverImg{
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
+.profileCoverImg {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
 
-.profileUserImg{
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    object-fit: cover;
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: auto;
-    top: 150px;
-    border: 3px solid white;
+.profileUserImg {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: auto;
+  top: 150px;
+  border: 3px solid white;
 }
 
-.profileInfo{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.editProfile {
+  border: 2px dashed black;
+  padding: 5px;
+  border-radius: 50%;
+  position: relative;
+  left: 590px;
+  top: 7px;
 }
 
-.profileInfoName{
-    font-size: 24px;
+.profileInfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.profileInfoDesc{
-    font-weight: 300;
+.profileInfoName {
+  font-size: 24px;
 }
 
-.profileRightBottom{
-    display: flex;
+.profileInfoDesc {
+  font-weight: 300;
+}
+
+.profileRightBottom {
+  display: flex;
 }
